static/css/style.css
main {
    height: 100vh;
    background: url(https://res.cloudinary.com/adamboley/image/upload/v1661792894/bg2_oq8m1s.jpg) no-repeat center center fixed;
    /* opacity: 60%; */
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 0;
}

.navbar, .navbar-expand-lg {
    z-index: 1;
}

.username {
    margin-right: 2em;
}

.card-inner {
    margin: 2em;
    max-height: 80vh;
}

.card-inner-large {
    margin: 2em;
    overflow-y: auto;
    max-height: 80vh;
}

.votes-container {
    width: 200px;
}

.upvotes-container, .index-timestamp-container {
    float: left;
}

.downvotes-container, .index-votes-container {
    float: right;
}

.float-clear {
    clear: both;
}

.comments {
    padding: 10px;
}

.index-review-link {
    text-decoration: none;
    color: rgb(88, 88, 88);
}

.index-review-link:hover {
    color: rgb(37, 37, 37);
}

.index-image-container {
    height: 450px;
}

.index-image-container img {
    max-height: 400px;
    /* max-width: 420px; */
    border-radius: 2%;
}

.page-link {
    color: black;
}

.page-link:hover {
    color: black;
}

.meta-data-container {
    height: 1.5em;
}

